     efffect as [lua] tags inside [scenario]).
   * enable side_for= in key [message] with [option]s.
   * added [effect] apply_to=fearless/healthy which is now used by healty/fearless
     traits instead of hardcoding the id of those traits in c++.
   * added support for a shuffle key in the [music] music to allow selecting
     between random and non-random music play (bug #19653)
 * Miscellaneous and bug fixes:
   * replace 'fight_on_without_leader'=yes/no with defeat_condition=no_leader/
     no_units/always/never which allows the wml developer to decide when a side
     is considered defeated
   * Fix Fisher-Yates implemenation of Lua helper.shuffle (bug #21706)
   * Fixed issues with the ~BG() image path function not always working with
     cached images.
   * Idle controlled sides now serialize as human controlled.
   * Fixed bug #20876: A segfault in cut_surface.
   * Dropped support for AmigaOS, BeOS, and OS/2.
   * Increased the sound mixer channel allocation from 16 to 32, thereby
     raising the limit for simultaneous sound effects from 5 to 20, and
     simultaneous UI sounds from 1 to 2.
   * Fix bug #21758: "Ready not blocked while player pick faction."
   * Fix bug #18829: "ai sides show up as "controller=network" on remote
     clients". This issue is the source of some difficulties with mp campaigns
     which occur when the campaign is reloaded from a non-host side, or after a
     player rejoins from observer status. Hopefully, reloading campaigns is
     easier after this.
   * Fix bug #21797: "Mandatory WML child missing" when leaving a reloaded game.
   * Fix bug #21808: Cannot join a reloaded game as an observer.
   * Fixed halos glitching through locations that become shrouded after the
     halo is rendered for the first time.
   * OS X user data directory is now ~/Library/Application Support/Wesnoth_1.13
   * Fix bug #21257: Lagging animations with skip AI animations and fog/shroud.