@@ -157,6 +157,8 @@ Version 1.13.0-dev:
      traits instead of hardcoding the id of those traits in c++.
    * added support for a shuffle key in the [music] music to allow selecting
      between random and non-random music play (bug #19653)
+   * Fixed a bug that prevented [animate_unit] from displaying death or victory
+     animations for those units that filter them based on weapon (eg. Wose)
  * Miscellaneous and bug fixes:
    * replace 'fight_on_without_leader'=yes/no with defeat_condition=no_leader/
      no_units/always/never which allows the wml developer to decide when a side
